examples/test/testpolicy18780.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18780
  namespace: namespace68
spec:
  podSelector:
    matchLabels:
      key40: value35
      key22: value16
      key24: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value3
          key15: value31
          key39: value31
      podSelector:
        matchLabels:
          key12: value1
          key40: value47
          key17: value32
